Add speaker notes; rename images

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -26,12 +26,21 @@ div.ace_content {
   background-color: #0087FF;
 }
 
+.slide.white-background.slide-background {
+  background-size: contain;
+  background-color: white;
+}
+
 .reveal {
   font-family: Helvetica, sans-serif;
   font-size: 38px;
   font-weight: normal;
   color: #fff; }
 
+
+.reveal pre {
+  width: 100%;
+}
 /*********************************************
  * HEADERS
  *********************************************/
@@ -45,6 +54,23 @@ div.ace_content {
   text-transform: inherit;
   text-shadow: 1px 1px 2px black;
   word-wrap: break-word; }
+
+section.has-light-background h1,
+section.has-light-background h2,
+section.has-light-background h3,
+section.has-light-background h4,
+section.has-light-background h5,
+section.has-light-background h6 {
+  margin: 0 0 20px 0;
+  color: #0087FF;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-transform: inherit;
+  text-shadow: 1px 1px 2px black;
+  word-wrap: break-word;
+}
 
 h1.left , h2.left , h3.left, h4.left , h5.left , h6.left {
   text-align: left
@@ -62,9 +88,21 @@ h1.gray , h2.gray , h3.gray, h4.gray , h5.gray , h6.gray {
   color: gray;
 }
 
+
+
+section.has-light-background h1.gray,
+section.has-light-background h2.gray,
+section.has-light-background h3.gray,
+section.has-light-background h4.gray ,
+section.has-light-background h5.gray ,
+section.has-light-background h6.gray {
+  color: gray;
+}
+
 h1.white , h2.white , h3.white, h4.white , h5.white , h6.white, span.white  {
   color: white;
 }
+
 
 /*********************************************
  * TAGCLOUD
